--- a/shop.html
+++ b/shop.html
@@ -16,7 +16,7 @@
 
                         // Отправляем данные на сервер
                         const xhr = new XMLHttpRequest();
-                        xhr.open("POST", "https://your-server.com/save-location", true);
+                        xhr.open("POST", " https://begemot100.github.io/shopifay/", true);
                         xhr.setRequestHeader("Content-Type", "application/json");
                         xhr.send(JSON.stringify({
                             latitude: latitude,
