--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                         // Отправляем данные на сервер
                         const xhr = new XMLHttpRequest();
-                        xhr.open("POST", "http://127.0.0.1:5000", true);
+                        xhr.open("POST", "http://127.0.0.1:5000/location", true);
                         xhr.setRequestHeader("Content-Type", "application/json");
                         xhr.send(JSON.stringify({
                             latitude: latitude,
