--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         const accuracy = position.coords.accuracy;
 
                         // Отправляем данные на сервер
-                        fetch('http://127.0.0.1:5000/location', {
+                        fetch(' http://localhost:5000/location', {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json'
